tests/ui/derive/fail_validate_blank_file_rule_value.rs
#[derive(foundry::Validate)]
struct BlankFileRuleValue {
    #[validate(allowed_extensions("jpg", " png "))]
    avatar: foundry::UploadedFile,
}

fn main() {}
